<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="wallpaper_app_name">Wallpapers</string>
    <string name="app_name">@string/wallpaper_app_name</string>
    <string name="select_wallpaper_label">Wallpaper categories</string>
    <string name="set_wallpaper_button_text">Set wallpaper</string>
    <string name="set_wallpaper_progress_message">Setting wallpaper&#8230;</string>
    <string name="try_again">Try again</string>
    <string name="select_a_photo">Select a photo</string>
    <string name="set_wallpaper_error_message">Unable to set wallpaper.</string>
    <string name="load_wallpaper_error_message">
        Unable to load wallpaper. The image is either corrupted or unavailable.
    </string>
    <string name="static_wallpaper_presentation_mode_message">Currently set</string>
    <string name="rotating_wallpaper_presentation_mode_message">Daily wallpaper</string>
    <string name="wallpaper_destination_both">Home &amp; Lock screen</string>
    <string name="choose_a_wallpaper_section_title">Choose a Wallpaper</string>
    <string name="choose_a_curated_photo_section_title">Suggested photos</string>
    <string name="creative_wallpaper_title">Create wallpaper</string>
    <string name="wallpaper_studio_title">Wallpaper Studio</string>
    <string name="home_screen_message">Home screen</string>
    <string name="lock_screen_message">Lock screen</string>
    <string name="home_and_lock_short_label">Home &#38; Lock</string>
    <string name="set_wallpaper_dialog_message">Set wallpaper on</string>
    <string name="set_wallpaper_home_screen_destination">Home screen</string>
    <string name="set_wallpaper_lock_screen_destination">Lock screen</string>
    <string name="set_wallpaper_both_destination">Home and lock screens</string>
    <string name="no_backup_image_wallpaper_label">Rotating Image Wallpaper</string>
    <string name="permission_needed_explanation">
      To display the current wallpaper here,
      <xliff:g example="Wallpapers" id="app_name">%1$s</xliff:g> needs access to your device\'s
      storage.
    </string>
    <string name="permission_needed_explanation_go_to_settings">
      To display the current wallpaper here, Wallpapers needs access to your device’s
      storage.\n\nTo change this setting, go to the Permissions area of Wallpapers’ app info.
    </string>
    <string name="permission_needed_allow_access_button_label">
      Allow access
    </string>
    <string name="no_backup_image_wallpaper_description">
      Live wallpaper service for rotating wallpapers
    </string>
    <string name="more_photos">More Photos</string>
    <string name="choose_a_photo">Choose a photo</string>
    <string name="daily_refresh_tile_title">Daily wallpaper</string>
    <string name="daily_refresh_tile_subtitle">Tap to turn on</string>
    <string name="start_rotation_dialog_body_live_wallpaper_needed">
      Wallpaper will change automatically every day. To finish setup, tap
      <![CDATA[<strong>Set wallpaper</strong>]]> on the next screen.
    </string>
    <string name="start_rotation_dialog_wifi_only_option_message">
      Download future wallpapers on Wi-Fi only
    </string>
    <string name="start_rotation_dialog_continue">Continue</string>
    <string name="start_rotation_progress_message">Downloading first wallpaper&#8230;</string>
    <string name="start_rotation_error_message">
      Unable to download first wallpaper. Please check your network settings and try again.
    </string>
    <string name="start_rotation_dialog_body">
      Wallpaper will change automatically every day
    </string>
    <string name="settings_button_label">
      Settings
    </string>
    <string name="explore">Explore</string>
    <string name="next_wallpaper">Next wallpaper</string>
    <string name="wallpaper_disabled_message">
        Setting a wallpaper is disabled on this device
    </string>
    <string name="wallpaper_disabled_by_administrator_message">
        Setting a wallpaper is disabled by your device administrator
    </string>
    <string name="wallpaper_set_successfully_message">
        Wallpaper set successfully
    </string>
    <string name="wallpapers_unavailable_offline_message">
        You need an Internet connection to view wallpapers. Please connect and try again."
    </string>
    <string name="currently_set_home_wallpaper_thumbnail">
      Currently set home screen wallpaper thumbnail
    </string>
    <string name="currently_set_lock_wallpaper_thumbnail">
      Currently set lock screen wallpaper thumbnail
    </string>
    <string name="currently_set_wallpaper_thumbnail">Currently set wallpaper thumbnail</string>
    <string name="wallpaper_thumbnail">Wallpaper thumbnail</string>
    <string name="explore_home_screen">Explore home screen wallpaper</string>
    <string name="explore_lock_screen">Explore lock screen wallpaper</string>
    <string name="refresh_daily_wallpaper_home_content_description">Refresh daily home screen wallpaper</string>
    <string name="refresh_daily_wallpaper_content_description">Refresh daily wallpaper</string>
    <string name="preview_screen_description">Wallpaper preview screen</string>
    <string name="preview_screen_description_editable">Wallpaper preview screen %1$s. Use two fingers to pan and zoom</string>
    <string name="preview_screen_description_non_editable">Wallpaper preview screen %1$s</string>
    <string name="folded_device_state_description">Folded</string>
    <string name="unfolded_device_state_description">Unfolded</string>
    <string name="full_preview_check_button_description">Done editing wallpaper</string>
    <string name="refreshing_daily_wallpaper_dialog_message">
        Refreshing daily wallpaper&#8230;
    </string>
    <string name="refresh_daily_wallpaper_failed_message">
        Failed to refresh daily wallpaper. Please check your network connection and try again.
    </string>
    <string name="on_device_wallpapers_category_title">On-device wallpapers</string>
    <string name="on_device_wallpapers_category_title_desktop">On device</string>
    <string name="on_device_wallpaper_title">Android wallpaper</string>
    <string name="live_wallpapers_category_title">Live wallpapers</string>
    <string name="my_photos_category_title">My photos</string>
    <string name="my_photos_generic_wallpaper_title">My photo</string>
    <string name="fallback_wallpaper_title">Wallpaper</string>
    <string name="app_not_found">App isn\'t installed.</string>
    <string name="center_wallpaper_position">Center</string>
    <string name="center_crop_wallpaper_position">Center crop</string>
    <string name="stretch_wallpaper_position">Stretch</string>
    <string name="live_wallpaper_collection_id" translatable="false">live_wallpapers</string>
    <string name="image_wallpaper_collection_id" translatable="false">image_wallpapers</string>
    <string name="on_device_wallpaper_collection_id" translatable="false">
      on_device_wallpapers
    </string>
    <string name="third_party_app_wallpaper_collection_id" translatable="false">
      third_party_app_wallpapers
    </string>
    <string name="preview">Preview</string>
    <string name="tab_info">Info</string>
    <string name="tab_customize">Customize</string>
    <string name="tab_effects">Effects</string>
    <string name="tab_share">Share</string>
    <string name="my_photos">My Photos</string>
    <string name="configure_wallpaper">Settings…</string>
    <string name="delete_live_wallpaper">Delete</string>
    <string name="edit_live_wallpaper">Edit</string>
    <string name="delete_wallpaper_confirmation">Delete this wallpaper from your device?</string>
    <string name="bottom_action_bar_back">Navigate up</string>
    <string name="bottom_action_bar_edit">Edit</string>
    <string name="bottom_action_bar_download">Download</string>
    <string name="download_effects">Download effects</string>
    <string name="bottom_action_bar_slideshow_wallpaper">Slideshow Wallpaper</string>
    <string name="bottom_action_bar_apply">Apply</string>
    <string name="accessibility_preview_pager" msgid="3548503287402185430">Page <xliff:g name="current_page" example="1">%1$d</xliff:g> of <xliff:g name="num_pages" example="2">%2$d</xliff:g></string>
    <string name="next_page_content_description" msgid="5290226604542300962">Next</string>
    <string name="previous_page_content_description" msgid="6025726405430262788">Previous</string>
    <string name="grid_control_metadata_name" translatable="false">com.android.launcher3.grid.control</string>
    <string name="wallpaper_title">Wallpaper</string>
    <string name="wallpaper_preview_card_content_description">Wallpaper preview</string>
    <string name="wallpaper_preview_card_content_description_editable">%1$s wallpaper preview %2$s, double tap to edit your photo</string>
    <string name="wallpaper_preview_card_content_description_non_editable">%1$s wallpaper preview %2$s</string>
    <string name="lock_wallpaper_preview_card_content_description">Lock screen wallpaper preview</string>
    <string name="home_wallpaper_preview_card_content_description">Home screen wallpaper preview</string>
    <string name="collection_not_exist_msg">The collection doesn\'t exist</string>
    <string name="wallpaper_exit_split_screen">Please exit split screen mode and try again</string>
    <string name="set_wallpaper_dialog_set_button">Set</string>
    <string name="cancel">Cancel</string>
    <string name="hide_ui_preview_text">Hide UI Preview</string>
    <string name="hint_hide_ui_preview">UI is hidden in preview. Double tap to unhide</string>
    <string name="show_ui_preview_text">Show UI Preview</string>
    <string name="hide_preview_controls_content_description">Preview controls are displayed. Double tap to hide</string>
    <string name="hide_preview_controls_action">Hide preview controls</string>
    <string name="show_preview_controls_content_description">Preview controls are hidden. Double tap to show</string>
    <string name="show_preview_controls_action">Show preview controls</string>
    <string name="hide_wallpaper_info_action">Hide wallpaper info</string>
    <string name="hint_show_ui_preview">UI is displayed in preview. Double tap to hide</string>
    <string name="wallpaper_picker_entry_title" msgid="7039652539125902659">Change wallpaper</string>
    <string name="lockscreen_wallpaper_preview_card_content_description" msgid="8575577284424318765">Lockscreen wallpaper preview</string>
    <string name="full_screen_task_affinity" translatable="false">.fullscreen</string>
    <string name="multi_crop_task_affinity" translatable="false">.multicrop</string>
    <string name="apply_btn" msgid="7965877231041987336">Apply</string>
    <string name="apply_wallpaper_title_text">Apply wallpaper\?</string>
    <string name="accessibility_customize_hidden">Customize hidden</string>
    <string name="accessibility_customize_shown">Customize shown</string>
    <string name="accessibility_info_hidden">Info hidden</string>
    <string name="accessibility_info_shown">Info shown</string>
    <string name="settings_snackbar_description">Please enable files and media in settings.</string>
    <string name="settings_snackbar_enable">Enable</string>
    <string name="open_my_photos">Open My Photos</string>
    <string name="lock_screen_preview_provider_authority" translatable="false">com.android.systemui.customization</string>
    <string name="lock_screen_tab">Lock screen</string>
    <string name="home_screen_tab">Home screen</string>
    <string name="reset">Reset</string>
    <string name="reset_confirmation_dialog_title">Reset changes?</string>
    <string name="reset_confirmation_dialog_message">Your changes won\'t be saved</string>
    <string name="more_wallpapers">More wallpapers</string>
    <string name="view_all_wallpapers">>\nView all</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="recents_wallpaper_label">%1$s, %2$d</string>
</resources>