<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2024 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->
<com.android.wallpaper.picker.preview.ui.view.ClickableMotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/preview_pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/preview_pager_motion_scene_handheld">

    <LinearLayout
        android:id="@+id/apply_wallpaper_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/apply_wallpaper_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/handheld_apply_wallpaper_preview_title_margin_bottom"
            android:text="@string/apply_wallpaper_title_text"
            android:textAppearance="@style/TextAppearance.SettingsLib.HeadlineLarge"  />

        <TextView
            android:id="@+id/apply_wallpaper_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.SettingsLib.TitleSmall" />
    </LinearLayout>

    <include layout="@layout/small_preview_handheld_card_view2"
        android:id="@+id/lock_preview" />

    <CheckBox
        android:id="@+id/lock_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:button="@drawable/checkbox_circle_shape"
        android:text="@string/set_wallpaper_lock_screen_destination"
        android:singleLine="true"
        android:ellipsize="end"
        android:scrollHorizontally="true"
        android:visibility="gone"/>

    <include layout="@layout/small_preview_handheld_card_view2"
        android:id="@+id/home_preview" />

    <CheckBox
        android:id="@+id/home_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:button="@drawable/checkbox_circle_shape"
        android:text="@string/set_wallpaper_home_screen_destination"
        android:singleLine="true"
        android:ellipsize="end"
        android:scrollHorizontally="true"
        android:visibility="gone"/>

    <Button
        android:id="@+id/apply_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/apply_button_background"
        android:gravity="center"
        android:minHeight="@dimen/handheld_apply_wallpaper_preview_button_min_height"
        android:text="@string/apply_btn"
        android:textColor="@color/system_on_primary"
        android:textAppearance="@style/WallpaperPicker.Preview.TextAppearance.NoAllCaps"
        android:visibility="gone" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cancel_button_background_variant"
        android:gravity="center"
        android:minHeight="@dimen/handheld_apply_wallpaper_preview_button_min_height"
        android:text="@string/cancel"
        android:textColor="@color/system_primary"
        android:textAppearance="@style/WallpaperPicker.Preview.TextAppearance.NoAllCaps"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</com.android.wallpaper.picker.preview.ui.view.ClickableMotionLayout>
